--- a/rcc-system/package.json
+++ b/rcc-system/package.json
@@ -8,9 +8,10 @@
         "test:e2e": "playwright test",
         "test:e2e:report": "playwright show-report"
     },
-  "devDependencies": {
+    "devDependencies": {
         "@playwright/test": "^1.57.0",
         "@tailwindcss/vite": "^4.0.0",
+        "@types/node": "^24.10.1",
         "@vitejs/plugin-react": "^4.3.2",
         "axios": "^1.11.0",
         "concurrently": "^9.0.1",
